--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-circular-progressbar": "2.0.2",
     "react-datetime": "2.16.3",
     "react-dom": "16.8.6",
+    "react-dropdown-input": "0.1.11",
     "react-moment": "0.9.6",
     "react-scripts": "3.0.1",
     "react-transition-group": "4.3.0",
