--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@material-ui/core": "4.5.1",
     "@material-ui/icons": "4.5.1",
     "@types/react-transition-group": "4.2.3",
+    "canvas-react": "0.0.1",
+    "canvasjs": "1.8.1",
     "d3-ease": "1.0.5",
     "moment": "2.24.0",
     "prop-types": "15.7.2",
